<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/doneButton"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_background_color"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        android:text="@string/done" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/view_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/image_border"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/image_layout">


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:padding="@dimen/_10sdp"
                android:id="@+id/imageList"/>

            <FrameLayout
                android:id="@+id/container_crop"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_layout"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/add_new"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/add_new"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_new"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/cam_text"
                        android:layout_gravity="center" />


                </LinearLayout>

                <View
                    android:layout_width="0.2dp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@color/choice_divider"/>

                <LinearLayout
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/retake_photo">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/retake"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/retake"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:textColor="@color/cam_text"
                        android:layout_gravity="center" />


                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/choice_divider"/>

            <!--Magic Color B/W and GreyScale-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <LinearLayout
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/magicColor"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/magic_color"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/magic_color"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/cam_text"
                        android:layout_gravity="center" />


                </LinearLayout>

                <View
                    android:layout_width="0.2dp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@color/choice_divider"/>

                <LinearLayout
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/BWMode">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/color_mono"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/b_w"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:textColor="@color/cam_text"
                        android:layout_gravity="center" />


                </LinearLayout>

                <View
                    android:layout_width="0.2dp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@color/choice_divider"/>

                <LinearLayout
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/grayMode"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/grey_scale"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/grey_scale"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/cam_text"
                        android:layout_gravity="center" />


                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/choice_divider"/>

            <!--Black and White & Magic Color-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/original">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/original_image"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/original"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:textColor="@color/cam_text"
                        android:layout_gravity="center" />


                </LinearLayout>

                <View
                    android:layout_width="0.2dp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@color/choice_divider"/>

                <LinearLayout
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/re_crop">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/crop"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crop"
                        android:textSize="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:textColor="@color/cam_text"
                        android:layout_gravity="center" />


                </LinearLayout>

                <View
                    android:layout_width="0.2dp"
                    android:layout_height="@dimen/_60sdp"
                    android:background="@color/choice_divider"/>

                <LinearLayout
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/finish_scan"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/scan_finish"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finish"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/cam_text"
                        android:layout_gravity="center" />


                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/choice_divider"/>

        </LinearLayout>



    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BA000000"
        android:id="@+id/progress_layout"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:max="100"
            android:progress="0" />

    </RelativeLayout>


</RelativeLayout>